--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -40,7 +40,7 @@
      <rect>
       <x>140</x>
       <y>10</y>
-      <width>281</width>
+      <width>821</width>
       <height>24</height>
      </rect>
     </property>
@@ -66,7 +66,7 @@
      <rect>
       <x>140</x>
       <y>40</y>
-      <width>281</width>
+      <width>821</width>
       <height>24</height>
      </rect>
     </property>
@@ -85,7 +85,7 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>10</y>
+      <y>70</y>
       <width>181</width>
       <height>24</height>
      </rect>
@@ -101,7 +101,7 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>40</y>
+      <y>100</y>
       <width>181</width>
       <height>24</height>
      </rect>
@@ -117,7 +117,7 @@
     <property name="geometry">
      <rect>
       <x>610</x>
-      <y>130</y>
+      <y>190</y>
       <width>70</width>
       <height>24</height>
      </rect>
@@ -144,7 +144,7 @@
     <property name="geometry">
      <rect>
       <x>610</x>
-      <y>70</y>
+      <y>130</y>
       <width>70</width>
       <height>24</height>
      </rect>
@@ -171,7 +171,7 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>100</y>
+      <y>160</y>
       <width>172</width>
       <height>30</height>
      </rect>
@@ -189,7 +189,7 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>160</y>
+      <y>220</y>
       <width>172</width>
       <height>24</height>
      </rect>
@@ -207,7 +207,7 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>70</y>
+      <y>130</y>
       <width>172</width>
       <height>24</height>
      </rect>
@@ -228,7 +228,7 @@
     <property name="geometry">
      <rect>
       <x>610</x>
-      <y>160</y>
+      <y>220</y>
       <width>70</width>
       <height>24</height>
      </rect>
@@ -255,7 +255,7 @@
     <property name="geometry">
      <rect>
       <x>610</x>
-      <y>100</y>
+      <y>160</y>
       <width>70</width>
       <height>24</height>
      </rect>
@@ -282,7 +282,7 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>130</y>
+      <y>190</y>
       <width>172</width>
       <height>24</height>
      </rect>
@@ -303,7 +303,7 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>190</y>
+      <y>250</y>
       <width>251</width>
       <height>24</height>
      </rect>
@@ -313,7 +313,7 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>250</y>
+      <y>310</y>
       <width>251</width>
       <height>24</height>
      </rect>
@@ -323,7 +323,7 @@
     <property name="geometry">
      <rect>
       <x>610</x>
-      <y>220</y>
+      <y>280</y>
       <width>70</width>
       <height>24</height>
      </rect>
@@ -338,7 +338,7 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>220</y>
+      <y>280</y>
       <width>172</width>
       <height>24</height>
      </rect>
@@ -356,7 +356,7 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>280</y>
+      <y>340</y>
       <width>172</width>
       <height>24</height>
      </rect>
@@ -377,7 +377,7 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>310</y>
+      <y>370</y>
       <width>172</width>
       <height>24</height>
      </rect>
@@ -398,7 +398,7 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>370</y>
+      <y>430</y>
       <width>172</width>
       <height>24</height>
      </rect>
@@ -416,7 +416,7 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>340</y>
+      <y>400</y>
       <width>172</width>
       <height>24</height>
      </rect>
@@ -437,7 +437,7 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>430</y>
+      <y>490</y>
       <width>172</width>
       <height>24</height>
      </rect>
@@ -455,7 +455,7 @@
     <property name="geometry">
      <rect>
       <x>430</x>
-      <y>400</y>
+      <y>460</y>
       <width>172</width>
       <height>24</height>
      </rect>
@@ -476,7 +476,7 @@
     <property name="geometry">
      <rect>
       <x>710</x>
-      <y>10</y>
+      <y>70</y>
       <width>181</width>
       <height>24</height>
      </rect>
@@ -492,7 +492,7 @@
     <property name="geometry">
      <rect>
       <x>710</x>
-      <y>40</y>
+      <y>100</y>
       <width>172</width>
       <height>24</height>
      </rect>
@@ -513,7 +513,7 @@
     <property name="geometry">
      <rect>
       <x>710</x>
-      <y>70</y>
+      <y>130</y>
       <width>181</width>
       <height>24</height>
      </rect>
@@ -529,7 +529,7 @@
     <property name="geometry">
      <rect>
       <x>710</x>
-      <y>100</y>
+      <y>160</y>
       <width>172</width>
       <height>24</height>
      </rect>
@@ -550,7 +550,7 @@
     <property name="geometry">
      <rect>
       <x>710</x>
-      <y>230</y>
+      <y>290</y>
       <width>172</width>
       <height>24</height>
      </rect>
@@ -571,7 +571,7 @@
     <property name="geometry">
      <rect>
       <x>710</x>
-      <y>260</y>
+      <y>320</y>
       <width>172</width>
       <height>24</height>
      </rect>
@@ -592,7 +592,7 @@
     <property name="geometry">
      <rect>
       <x>710</x>
-      <y>290</y>
+      <y>350</y>
       <width>172</width>
       <height>24</height>
      </rect>
@@ -613,7 +613,7 @@
     <property name="geometry">
      <rect>
       <x>710</x>
-      <y>160</y>
+      <y>220</y>
       <width>251</width>
       <height>24</height>
      </rect>
@@ -623,7 +623,7 @@
     <property name="geometry">
      <rect>
       <x>710</x>
-      <y>200</y>
+      <y>260</y>
       <width>172</width>
       <height>24</height>
      </rect>
@@ -644,7 +644,7 @@
     <property name="geometry">
      <rect>
       <x>710</x>
-      <y>130</y>
+      <y>190</y>
       <width>172</width>
       <height>24</height>
      </rect>
@@ -665,36 +665,6 @@
     <property name="geometry">
      <rect>
       <x>610</x>
-      <y>280</y>
-      <width>70</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>11</pointsize>
-     </font>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="spinBoxTileHeight">
-    <property name="geometry">
-     <rect>
-      <x>610</x>
-      <y>310</y>
-      <width>70</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>11</pointsize>
-     </font>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="spinBoxTileOffsetX">
-    <property name="geometry">
-     <rect>
-      <x>610</x>
       <y>340</y>
       <width>70</width>
       <height>24</height>
@@ -705,8 +675,11 @@
       <pointsize>11</pointsize>
      </font>
     </property>
+    <property name="minimum">
+     <number>3</number>
+    </property>
    </widget>
-   <widget class="QSpinBox" name="spinBoxTileOffsetY">
+   <widget class="QSpinBox" name="spinBoxTileHeight">
     <property name="geometry">
      <rect>
       <x>610</x>
@@ -720,12 +693,51 @@
       <pointsize>11</pointsize>
      </font>
     </property>
+    <property name="minimum">
+     <number>3</number>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinBoxTileOffsetX">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>400</y>
+      <width>70</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="minimum">
+     <number>2</number>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinBoxTileOffsetY">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>430</y>
+      <width>70</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="minimum">
+     <number>2</number>
+    </property>
    </widget>
    <widget class="QSpinBox" name="spinBoxTileShiftX">
     <property name="geometry">
      <rect>
       <x>610</x>
-      <y>400</y>
+      <y>460</y>
       <width>70</width>
       <height>24</height>
      </rect>
@@ -743,7 +755,7 @@
     <property name="geometry">
      <rect>
       <x>610</x>
-      <y>430</y>
+      <y>490</y>
       <width>70</width>
       <height>24</height>
      </rect>
@@ -761,7 +773,7 @@
     <property name="geometry">
      <rect>
       <x>890</x>
-      <y>40</y>
+      <y>100</y>
       <width>70</width>
       <height>24</height>
      </rect>
@@ -776,7 +788,7 @@
     <property name="geometry">
      <rect>
       <x>890</x>
-      <y>100</y>
+      <y>160</y>
       <width>70</width>
       <height>24</height>
      </rect>
@@ -791,7 +803,7 @@
     <property name="geometry">
      <rect>
       <x>890</x>
-      <y>130</y>
+      <y>190</y>
       <width>70</width>
       <height>24</height>
      </rect>
@@ -806,7 +818,7 @@
     <property name="geometry">
      <rect>
       <x>890</x>
-      <y>200</y>
+      <y>260</y>
       <width>70</width>
       <height>24</height>
      </rect>
@@ -821,7 +833,7 @@
     <property name="geometry">
      <rect>
       <x>890</x>
-      <y>230</y>
+      <y>290</y>
       <width>70</width>
       <height>24</height>
      </rect>
@@ -836,7 +848,7 @@
     <property name="geometry">
      <rect>
       <x>890</x>
-      <y>260</y>
+      <y>320</y>
       <width>70</width>
       <height>24</height>
      </rect>
@@ -851,7 +863,7 @@
     <property name="geometry">
      <rect>
       <x>890</x>
-      <y>290</y>
+      <y>350</y>
       <width>70</width>
       <height>24</height>
      </rect>
@@ -866,7 +878,7 @@
     <property name="geometry">
      <rect>
       <x>710</x>
-      <y>320</y>
+      <y>380</y>
       <width>172</width>
       <height>24</height>
      </rect>
@@ -883,11 +895,11 @@
      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Angle step&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
-   <widget class="QDoubleSpinBox" name="doubleSpinBox">
+   <widget class="QDoubleSpinBox" name="doubleSpinBoxAngleStep">
     <property name="geometry">
      <rect>
       <x>890</x>
-      <y>320</y>
+      <y>380</y>
       <width>70</width>
       <height>24</height>
      </rect>
