--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -623,6 +623,9 @@
     <property name="minimum">
      <number>3</number>
     </property>
+    <property name="maximum">
+     <number>201</number>
+    </property>
    </widget>
    <widget class="QSpinBox" name="spinBoxTileOffsetX">
     <property name="geometry">
@@ -640,6 +643,9 @@
     </property>
     <property name="minimum">
      <number>2</number>
+    </property>
+    <property name="maximum">
+     <number>101</number>
     </property>
    </widget>
    <widget class="QSpinBox" name="spinBoxTileOffsetY">
@@ -659,6 +665,12 @@
     <property name="minimum">
      <number>2</number>
     </property>
+    <property name="maximum">
+     <number>101</number>
+    </property>
+    <property name="singleStep">
+     <number>1</number>
+    </property>
    </widget>
    <widget class="QSpinBox" name="spinBoxTileShift">
     <property name="geometry">
@@ -676,6 +688,9 @@
     </property>
     <property name="minimum">
      <number>1</number>
+    </property>
+    <property name="maximum">
+     <number>201</number>
     </property>
    </widget>
    <widget class="QSpinBox" name="spinBoxTileLineWidth">
