tile size max changed

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -644,6 +644,9 @@
     <property name="minimum">
      <number>2</number>
     </property>
+    <property name="maximum">
+     <number>101</number>
+    </property>
    </widget>
    <widget class="QSpinBox" name="spinBoxTileOffsetY">
     <property name="geometry">
@@ -662,6 +665,9 @@
     <property name="minimum">
      <number>2</number>
     </property>
+    <property name="maximum">
+     <number>101</number>
+    </property>
    </widget>
    <widget class="QSpinBox" name="spinBoxTileShift">
     <property name="geometry">
@@ -679,6 +685,9 @@
     </property>
     <property name="minimum">
      <number>1</number>
+    </property>
+    <property name="maximum">
+     <number>201</number>
     </property>
    </widget>
    <widget class="QSpinBox" name="spinBoxTileLineWidth">
