for ITL Scvience day
Config Only

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -16,7 +16,7 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>GLCM based Directionality Map Estimation</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QPushButton" name="pushButtonSelectInFolder">
